[package]
name = "my_game"
version = "0.1.0"
edition = "2021"
description = "Coolest Game"

# authors.workspace = true
# edition.workspace = true
# license.workspace = true
# rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# non-local crates
serde = "1.0.163"
rand = "0.8.5"
dirs = "5.0.1"
ron = "0.8"
bevy_sprite3d = "3.0.0"
bevy = { version = "0.14.1", default-features = true, features = [
    # https://docs.rs/bevy/0.13.1/i686-pc-windows-msvc/bevy/index.html#optional-features
    # dynamic_linking
    # ...
]}
# bevy_common_assets = { version = "0.10.0", features = ["ron", "json", "toml"] }
# bevy_editor_pls = { version = "0.8" }
# bevy_flycam = "0.13"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# [dev-dependencies]
# my-dependency.workspace = true
# other-dev-dependency = "1.4.0"
